--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "rss-parser": "^3.13.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.17",
